--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "format": "prettier . --write",
+        "format:check": "prettier . --check"
     },
     "keywords": [],
     "author": "Minemetero, lingbopro and other contributors",
